# Slingshot

./: .gitignore  .gitmodules  Readme.md  pom.xml
JNISlingshot/: .gitignore  AuthTest.cpp  CMakeLists.txt  Tests.cpp  bswapintrin.h  jni_str.h  json.h  library.cpp  library.h  loader.cpp  loader.h
JNISlingshot/JNI/: CMakeLists.txt  jawt_md.h  str_utils.hpp
JNISlingshot/JNI/include/: Class.hpp  Exception.hpp  Helper.hpp  Method.hpp  String.hpp
JNISlingshot/JNI/src/: Class.cpp  Helper.cpp  String.cpp
JNISlingshot/base64/: base64.cpp
JNISlingshot/utils/: utils.h
SVMFX/: Agent.bat  Compile.bat  README.md  Resources.rc  Test.rc
SVMFX/Configs/: jni-config.json  reflect-config-2.json  reflect-config.json  resource-config-2.json  resource-config.json
src/main/java/com/freya02/slingshot/: AOT.java  Logger.java  Main.java  MinecraftTask.java  ProgressFormatter.java  SlingshotAssetsSubtask.java  SlingshotController.java  SlingshotFileSubtask.java  SlingshotGameSubtask.java  SlingshotJreSubtask.java  SlingshotTask.java
src/main/java/com/freya02/slingshot/auth/: AuthController.java  AuthenticationData.java  Credentials.java  MSAuth.java  MSAuthController.java
src/main/java/com/freya02/slingshot/settings/: Settings.java  SettingsController.java
src/main/resources/com/freya02/slingshot/: Slingshot.css  Slingshot.fxml
src/main/resources/com/freya02/slingshot/auth/: Authentication.css  Authentication.fxml  MSWait.fxml
src/main/resources/com/freya02/slingshot/settings/: Settings.css  Settings.fxml
